style.css
/* below code to offset the navbar not expanding all the way */
body {margin:0;} 
/* Add a black background color to the top navigation */
.topnav {
    background-color: black;
    background-image: linear-gradient(black, rgb(48, 48, 48),  black);
    position: fixed; /* Set the navbar to fixed position */
    top: 0; /* Position the navbar at the bottom of the page */
    width: 100%; /* Full width */
    box-shadow: 2px 2px 5px black;
  }
  
  /* Style the links inside the navigation bar */
  .topnav a {
    float: right;
    color: white;
    text-align: center;
    padding: 14px 24px;
    text-decoration: none;
    font-family: 'Orbitron', sans-serif;
    -webkit-text-stroke-width: 0.25px; 
    -webkit-text-stroke-color: rgb(0, 205, 219); 
    text-shadow: 2px 2px 5px black;
  }
  
  /* Change the color of links on hover */
  .topnav a:hover {
    /* background-color: #ddd;
    color: black; */
    color: rgb(0, 205, 219);
    transition-duration: 0.35s;
  }
  
body {
    background-image: url("./images/deep-blue-space_original.jpg");
    background-position: center center;
    background-repeat: no-repeat;
    background-attachment: fixed;
    background-size: cover;
}

h1, h2, h3 {
    color: white;
    font-family: 'Orbitron', sans-serif;
    font-weight: bold;
    -webkit-text-stroke-width: 0.05px; 
    -webkit-text-stroke-color: rgb(0, 157, 168); 
    text-shadow: 2px 2px 5px black;
}

p, li, label {
    color: white;
    font-family: 'Orbitron', sans-serif;
    -webkit-text-stroke-width: 0.25px; 
    -webkit-text-stroke-color: rgb(0, 205, 219); 
    text-shadow: 2px 2px 5px black;
}

/* .project-link {
    color: inherit;
  } */

  /* Style the links inside the navigation bar */
  .project-link {
    color: white;
    /* padding: 14px 24px; */
    text-decoration: none;
    font-family: 'Orbitron', sans-serif;
    -webkit-text-stroke-width: 0.25px; 
    -webkit-text-stroke-color: rgb(0, 205, 219); 
    text-shadow: 2px 2px 5px black;
  }
  
  /* Change the color of links on hover */
  .project-link:hover {
    color: rgb(0, 205, 219);
    transition-duration: 0.35s;
  }

  

/* below code is without the navbar, if navbar goes out include this */
/* * {
    margin-left: 1%;
    margin-right: 1%;
} */

/* below is code for when you have navbar, if navbar goes, take this out too */
#title-section, #intro-section, #portfolio-section, #about-me, #contact-me {
    margin-left: 3%;
    margin-right: 3%;
}

#title-section {
    margin-top: 4%; /*this is so the navbar doesnt cover the title */
    margin-bottom: 2%;
    font-size: 1.2em;
}

@media only screen and (max-width: 1000px) {
    #title-section {
        margin-top: 5%;
    }
  }
@media only screen and (max-width: 800px) {
    #title-section {
        margin-top: 8.5%;
    }
  }
@media only screen and (max-width: 400px) {
    #title-section {
        margin-top: 9.5%;
    }
    .topnav a {
        /* float: none; */
        padding: 9px;
    }
  }

#picofme {
    float: left;
    margin-right: 1%;
    box-shadow: 2px 2px 5px black;
    max-width: 200px;
    max-height: 200px;
}

#intro-section {
    margin-bottom: 3%;
    font-size: 1.2em;
}

#portfolio-section {
    font-size: 1.2em;
}

.project-picture {
    max-width: 400px;
    float: left;
    margin-right: 1%;
    box-shadow: 8px 8px 5px 0px rgba(0,0,0,0.7);
}

/* each project needs different bottom margin */
#event-finder {
    margin-bottom: 12%;
}
#landing-page {
    margin-bottom: 14%;
}
#project-0 {
    margin-bottom: 14%;
}
#project-3 {
    margin-bottom: 12%;
}
#project-1 {
    margin-bottom: 11%;
}
#project-2 {
    margin-bottom: 11%;
}


#about-me {
    font-size: 1.2em;
    margin-bottom: 3.5%;
}

#contact-me {
    background-color: rgb(0, 0, 0, 0.6);
    border: 4px double rgb(0, 205, 219);
    font-size: 1.2em;
    text-align: center;
}

textarea {
    width: 350px;
}

@media only screen and (max-width: 400px) {
    textarea {
        width: 339px;
    }
}

/* use the following if tou make list with contact items
#contact-items { 
    overflow-x:hidden;
    white-space:nowrap; 
    height: 1em;
    width: 100%;
}  */

.contact-info {  
    display:inline; 
}  

button {
    font-family: 'Orbitron', sans-serif;
    border: 1px solid rgb(0, 205, 219);
    border-radius: 4px;
}

#contact-me {
    border-radius: 2.5px;
    box-shadow: 8px 8px 5px 0px rgba(0,0,0,0.7);
}

@media only screen and (max-width: 400px) {
    #contact-me {
        margin-bottom: 20%;
    }
    input {
        width: 200px
    }
}

.contact-item {
    display: inline-block;
    margin-left: 10px; 
}

@media only screen and (max-width: 400px) {
    .contact-item {
        margin-bottom: 2.5%;
    }
}

